[project]
name = "feedbax"
version = "0.1.2"
description = "Optimal feedback control + interventions in JAX."
# url = ""
authors = [
    {name = "Matt L Laporte", email = "matt.l.laporte@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    'jax',
    'neural-networks',
    'optimal-control',
    'optimal-feedback-control',
    'pytorch',
    'biomechanics',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "crc32c>=2.7.1",
    "diffrax>=0.7.0",
    "equinox>=0.11.12",
    "jax>=0.5.2",
    "jaxtyping>=0.2.38",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "optax>=0.2.4",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.2.2",
    "tqdm>=4.67.1",
]

[project.urls]
repository = "https://github.com/mlprt/feedbax"
documentation = "https://docs.lprt.ca/feedbax"

[tool.pyright]
include = ["feedbax"]
exclude = ["**/__pycache__"]
verboseOutput = true
reportMissingImports = true
reportMissingTypeStubs = true
# Temporary:
# reportAttributeAccessIssue = false

[tool.black]
target-version = ['py310', 'py311', 'py312']
include = 'feedbax\/.*\.pyi?$'
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["feedbax"]

[tool.hatch.build.targets.wheel]
packages = ["feedbax"]
